--- a/labels-selectors/demo1.yaml
+++ b/labels-selectors/demo1.yaml
@@ -7,6 +7,32 @@ metadata:
     app: nginx
 spec:
   containers:
+  - name: nginx1
+    image: nginx:latest
+    ports:
+    - containerPort: 80
+---
+apiVersion: v1
+kind: Pod
+metadata:
+  name: nginx2
+  labels:
+    environment: production
+spec:
+  containers:
+  - name: nginx
+    image: nginx:latest
+    ports:
+    - containerPort: 80
+---
+apiVersion: v1
+kind: Pod
+metadata:
+  name: nginx3
+  labels:
+    app: nginx
+spec:
+  containers:
   - name: nginx
     image: nginx:latest
     ports:
